--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ packaging==24.1
 pluggy==1.5.0
 pydantic==2.8.2
 pydantic_core==2.20.1
+PyJWT==2.9.0
 python-dotenv==1.0.1
 PyYAML==6.0.1
 sniffio==1.3.1
